--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,7 +66,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li ng-if="!header.loggedin" >
-            <a href ="#logout">Log In</a>
+            <a href ="#login">Log In</a>
         </li>
         <li ng-if="header.loggedin" >
             <a href ="#logout">Log Out</a>
